# disclose

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/web/: next.config.js  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/new/: page.tsx
apps/web/app/templates/: page.tsx
apps/web/app/verify/: page.tsx
apps/web/components/disclosure/: DisclosurePreview.tsx  ExportPanel.tsx  ProofHashTable.tsx  PublishPanel.tsx  TimestampReceiptPanel.tsx  VerificationHints.tsx
apps/web/components/meter/: AssistanceMeter.tsx
apps/web/components/proof/: ProofLedger.tsx
apps/web/components/shell/: AppShell.tsx  Footer.tsx  TopNav.tsx
apps/web/components/timestamp/: TimestampStep.tsx
apps/web/lib/: assistance.ts  disclosures.ts  types.ts
apps/web/prisma/: schema.prisma
apps/web/types/: opentimestamps.d.ts
crates/disclose/: Cargo.toml
crates/disclose/src/: errors.rs  hashing.rs  main.rs  manifest.rs  merkle.rs  ots.rs  publish.rs  templates.rs  validation.rs  workspace.rs
crates/disclose/src/commands/: mod.rs
crates/disclose/src/tui/: mod.rs
crates/disclose/tests/: e2e_cli.rs
docs/: CLI_SPEC.md  DECISIONS.md  DESIGN_SYSTEM.md  MONOREPO_STRUCTURE.md  PRD.md  SPEC_INDEX.md  WEB_UI_SPEC.md
scripts/: ots-helper.mjs
shared/examples/: disclosure.example.json
shared/schemas/: disclosure.schema.json
shared/templates/: article.json  code.json
shared/tokens/: tokens.json
(+35 files in other folders)
