[package]
name = "disclose"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.18", features = ["derive"] }
crossterm = "0.27.0"
hex = "0.4.3"
include_dir = "0.7.4"
jsonschema = "0.18.0"
mime_guess = "2.0.5"
pathdiff = "0.2.1"
ratatui = "0.26.3"
reqwest = { version = "0.12.9", features = ["json", "rustls-tls"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.10.0", features = ["v4"] }
zip = "2.2.0"

[dev-dependencies]
assert_cmd = "2.0.14"
tempfile = "3.12.0"
